[gd_scene load_steps=2 format=3 uid="uid://b8nvuhpu5i8fs"]

[ext_resource type="Script" path="res://Menus/main_menu.gd" id="1_pkiib"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pkiib")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -250.0
offset_right = 150.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(300, 500)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 22.0
offset_right = -30.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="NewRunButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "New Run"

[node name="NewSeededRunButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "New Run (seeded)"

[node name="QuitButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/NewRunButton" to="." method="_on_NewRunButton_pressed"]
